# rox

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  test.lox
benches/: e2e.rs
benches/e2e/: binary_tree.lox  equality.lox  fib20.lox  instantiation.lox  invocation.lox  method_call.lox  properties.lox  trees.lox  zoo.lox
playground/: bagel.lox  bound_scone.lox  closure_00.lox  closure_01.lox  closure_02.lox  coffee_maker.lox  control_flows.lox  field_invoke.lox  hello_world.lox  pasta.lox  reference_cycle.lox  this_nested.lox  time_fib40.lox  trees.lox
scripts/: dockertest.sh  entrypoint.sh
src/: chunk.rs  compile.rs  gc.rs  heap.rs  lib.rs  list.rs  main.rs  object.rs  opcode.rs  scan.rs  stack.rs  static_vec.rs  table.rs  value.rs  vm.rs
src/gc/: alloc.rs  chain.rs  heap.rs  link.rs  object.rs  ptr.rs  root.rs
