[package]
name = "rox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dbg-stress-gc = []
dbg-execution = []
dbg-heap = []

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
regex = "1.11.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }

[[bench]]
name = "e2e"
harness = false
